# scoped-trace

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.j2  README.md  justfile
.github/workflows/: ci.yml
examples/: inlining.rs
src/: lib.rs  symbol.rs  tree.rs
tests/: inlining.rs
