[package]
name = "scoped-trace"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
rust-version = "1.61"
description = "Collect scoped backtraces."
repository = "https://github.com/jswrenn/scoped-trace"
categories = ["development-tools::debugging"]

[dependencies]
backtrace = "0.3"
indexmap = "1.9.2"
pin-project-lite = "0.2.9"

[package.metadata.release]
pre-release-replacements = [
  {file="./CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="./CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="./CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="./CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="./CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/jswrenn/scoped-trace/compare/{{tag_name}}...HEAD", exactly=1},
]
tag-name = "v{{version}}"